// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setupHeader adds \`is-navInView\` class to html element 1`] = `
"<html class=\\"is-navInView\\"><head></head><body>
            <button data-nav-button=\\"\\"></button>
        </body></html>"
`;

exports[`setupHeader adds \`is-open\` class to nav label 1`] = `
"
            <button data-nav-button=\\"\\"></button>
            <label data-nav-toggle=\\"\\" class=\\"is-open\\">Menu</label>
        "
`;

exports[`setupHeader adds \`is-visible\` class to nav container 1`] = `
"
            <button data-nav-button=\\"\\"></button>
            <div data-nav-container=\\"\\" class=\\"is-visible\\"></div>
        "
`;

exports[`setupHeader does nothing if nav input does not exist 1`] = `
"
            <button></button>
            <div data-nav-container=\\"\\"></div>
            <label data-nav-toggle=\\"\\">Menu</label>
        "
`;
